# QuickFile

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
scripts/Windows/: build.bat  build_debug.bat  build_release.bat  push.bat  run.bat
src/: main.c
